--- a/Kane's Website/html/home.html
+++ b/Kane's Website/html/home.html
@@ -21,13 +21,13 @@
 
 <!-- The Modal -->
 <div id="id01" class="modal">
-  <a href="home.html"></a><span onclick="document.getElementById('id01').style.display='none'"
-class="close" title="Close Modal">&times;</span></a>
+  <span onclick="document.getElementById('id01').style.display='none'"
+class="close" title="Close Modal">&times;</span>
 
   <!-- Modal Content -->
   <form class="modal-content" action="/action_page.php">
     <div class="imgcontainer">
-      <img src="img/avatar.jpg" alt="Avatar" class="avatar">
+      <img src="avatar.jpg" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
@@ -46,7 +46,7 @@ class="close" title="Close Modal">&times;</span></a>
     </div>
 
     <div class="container" style="background-color:lightblue">
-      <a href="home.html"><button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button></a>
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
 
     </div>
